--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,3 +2,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-color: #f8f8f8;
+}
+
+.building {
+  background-image: url("https://cdn.pixabay.com/photo/2019/12/10/10/53/architecture-4685608__340.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 260px;
+}
+
+
