--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,26 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 260px;
+  min-height: 260px;
 }
 
+.blackBackground {
+  background-image: url("https://cdn.pixabay.com/photo/2015/12/08/00/39/architecture-1081912__340.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  min-height: 480px;
+}
+
+
+
+.projectInfoItem {
+  background-image: url("https://cdn.pixabay.com/photo/2020/03/14/21/56/wine-4931923__340.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  min-height: 400px;
+}
 
