--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,8 +25,6 @@ body {
   min-height: 480px;
 }
 
-
-
 .projectInfoItem {
   background-image: url("https://cdn.pixabay.com/photo/2020/03/14/21/56/wine-4931923__340.jpg");
   background-position: center;
@@ -35,4 +33,18 @@ body {
   width: 100%;
   min-height: 400px;
 }
+
+.blackCircleDesign {
+  background-image: url("https://cdn.pixabay.com/photo/2015/10/01/21/57/wallpaper-967836__340.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  min-height: 450px;
+}
+
+input[type="text"] {
+  border-bottom: 1px solid rgb(153, 153, 14);
+}
+
 
