--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,7 +17,7 @@ body {
 }
 
 .blackBackground {
-  background-image: url("https://cdn.pixabay.com/photo/2015/12/08/00/39/architecture-1081912__340.jpg");
+  background-image: url("https://media.istockphoto.com/photos/black-wooden-texture-background-blank-for-design-picture-id678497754?k=20&m=678497754&s=612x612&w=0&h=R4Y_kB1p0_NysMvF_bpY65CJmsYFdJm3tzjxacsHT4c=");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
